--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,6 +38,11 @@ body {
     height: 110px;
 }
 
+.image-project {
+    width: 100%;
+    height: 900px;
+}
+
 @media (width < 1200px) {
     .gif {
         width: 600px;
