--- a/src/styles/Swiper.css
+++ b/src/styles/Swiper.css
@@ -1,9 +1,17 @@
 .swiper-pagination-bullet {
     width: 15px;
     height: 15px;
-    background: #ffffff;
+    background: #f5f5f5;
 }
 
 .swiper-pagination-bullet-active {
-    background: #007bff;
+    background: #f5f5f5;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    padding: 1rem;
+    border-radius: 20px;
+    text-shadow: 2px 2px 2px #0c0c0c;
+    color: #f5f5f5;
 }
